# django-q2-full-of-juice

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  README.rst  docker-compose.yml  mkdocs.yml  pyproject.toml  sonar-project.properties  test-services-docker-compose.yaml
.claude/rules/: main-rules.md
.github/workflows/: docs.yml  playwright.yml  pr.yml  publish-coverage.yml  publish-package.yml  test.yml  test_pypi_publish.py
django_q/: __init__.py  monitor.py  pusher.py  signals.py  worker.py
docs/: admin.md  architecture.md  brokers.md  chain.md  cluster.md  conf.py  configure.md  errors.md  examples.md  examples.rst  group.md  index.md  install.md  install.rst  iterable.md  monitor.md  opentelemetry.md  schedules.md  signals.md  signals.rst  tasks.md
playwright/: .gitignore  package-lock.json  package.json  playwright.config.ts  tsconfig.json
playwright/helpers/: api.ts  data.ts
playwright/tests/: basic.spec.ts  broken-func.spec.ts  cascade.spec.ts  chain-progress.spec.ts  chain-with-failure.spec.ts  chain.spec.ts  compute.spec.ts  concurrency.spec.ts  delete-group.spec.ts  exception-passthrough.spec.ts  failure.spec.ts  fan-out.spec.ts  hook.spec.ts  intended-date.spec.ts  iter.spec.ts  max-attempts.spec.ts  per-task-timeout.spec.ts  queue-size.spec.ts  retry-attempt-stamping.spec.ts  save-false.spec.ts  schedule-cron.spec.ts  schedule-recurring.spec.ts  schedule.spec.ts  signals.spec.ts  task-name.spec.ts
sample-project/: .dockerignore  Dockerfile  docker-compose.yml
sample-project/sample/: settings.py  urls.py
sample-project/scripts/: start-web.sh  start-worker.sh
sample-project/tasks_app/: __init__.py  apps.py  signals.py  tasks.py  urls.py  views.py
scripts/: filter_failed_tests.py  start-formatter-lint.sh  start-tests.sh
tests/: settings.py  test_admin.py  test_brokers.py  test_cached.py  test_cluster.py  test_commands.py  test_monitor.py  test_scheduler.py
